Сохранение перед переносом на другую машину

--- a/UpaProject/Views/Journals/Operativs/PageOpJournal.xaml
+++ b/UpaProject/Views/Journals/Operativs/PageOpJournal.xaml
@@ -14,15 +14,15 @@
                     Name="BtnNewTurn"
                     Click="BtnNewTurn_Click"
                     DockPanel.Dock="Left"
-                    Style="{StaticResource ButtonFrame}"/>
+                    Style="{StaticResource BtnFrame}"/>
             <Button Content="Создать событие"
                     Name="BtnNewSubj"
                     DockPanel.Dock="Left"
                     Click="BtnNewSubj_Click"
-                    Style="{StaticResource ButtonFrame}"/>
+                    Style="{StaticResource BtnFrame}"/>
             <Button Content="Сформировать документ Excel"
                     DockPanel.Dock="Left"
-                    Style="{StaticResource ButtonFrame}"/>
+                    Style="{StaticResource BtnFrame}"/>
             <StackPanel Orientation="Vertical"
                     DockPanel.Dock="Right">
                 <TextBlock Text="Последняя открытая смена от:"
